added cohort form to teachers view

--- a/app/views/teachers/_form.html.erb
+++ b/app/views/teachers/_form.html.erb
@@ -36,6 +36,11 @@
     <%= form.text_field :education %>
   </div>
 
+  <div class = "field">
+    <%= form.label :cohort %>
+    <%= form.text_field :cohort %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
