--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,9 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Teachers</h1>
+<h3>Teachers</h3>
 
-<table>
+ <table>
+
+
+  <tbody>
+     <%# <% @students.each do |student| %>  
+
+    <table class="table table-sm table-striped table-bordered">
+
   <thead>
+
     <tr>
       <th>First name</th>
       <th>Last name</th>
@@ -12,10 +20,10 @@
       <th>Education</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
 
-  <tbody>
-    <% @teachers.each do |teacher| %>
+  </thead>
+  <% @teachers.each do |teacher| %>
+  
       <tr>
         <td><%= teacher.first_name %></td>
         <td><%= teacher.last_name %></td>
@@ -26,11 +34,12 @@
         <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
         <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+
     <% end %>
   </tbody>
 </table>
 
+
 <br>
 
 <%= link_to 'New Teacher', new_teacher_path %>
-
