--- a/app/views/student_cohorts/index.html.erb
+++ b/app/views/student_cohorts/index.html.erb
@@ -1,28 +1,39 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Student Cohorts</h1>
+<h3>Student Cohorts</h3>
 
-<table>
+
+ <table>
+
+
+  <tbody>
+     <%# <% @students.each do |student| %>  
+
+    <table class="table table-sm table-striped table-bordered">
+
   <thead>
-    <tr>
+
+   <tr>
       <th>Student</th>
       <th>Cohort</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
 
-  <tbody>
-    <% @student_cohorts.each do |student_cohort| %>
-      <tr>
+  </thead>
+ <% @student_cohorts.each do |student_cohort| %>
+  
+   <tr>
         <td><%= student_cohort.student_id %></td>
         <td><%= student_cohort.cohort_id %></td>
         <td><%= link_to 'Show', student_cohort %></td>
         <td><%= link_to 'Edit', edit_student_cohort_path(student_cohort) %></td>
         <td><%= link_to 'Destroy', student_cohort, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    </tr>
+
     <% end %>
   </tbody>
 </table>
+
 
 <br>
 
