--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,21 +1,30 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Students</h1>
+<h3>Students</h3>
 
 <table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Age</th>
-      <th>Education</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+
 
   <tbody>
-    <% @students.each do |student| %>
-      <tr>
+     <%# <% @students.each do |student| %>  
+
+    <table class="table table-sm table-striped table-bordered">
+  <thead>
+    <tr>
+    
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Age</th>
+      <th scope="col">Education</th>
+       <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      
+    </tr>
+  </thead>
+ <% @students.each do |student| %> 
+  
+    <tr>
         <td><%= student.first_name %></td>
         <td><%= student.last_name %></td>
         <td><%= student.age %></td>
@@ -25,6 +34,16 @@
         <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+  </tbody>
+</table>
+
+
+
+
+      
+
+
+    <%# <% end %> 
   </tbody>
 </table>
 
