--- a/app/views/teacher_cohorts/index.html.erb
+++ b/app/views/teacher_cohorts/index.html.erb
@@ -1,25 +1,35 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Teacher Cohorts</h1>
+<h3>Teacher Cohorts</h3>
 
-<table>
+
+ <table>
+
+
+  <tbody>
+     <%# <% @students.each do |student| %>  
+
+    <table class="table table-sm table-striped table-bordered">
+
   <thead>
-    <tr>
+
+   <tr>
       <th>Teacher</th>
       <th>Cohort</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
 
-  <tbody>
-    <% @teacher_cohorts.each do |teacher_cohort| %>
-      <tr>
+  </thead>
+  <% @teacher_cohorts.each do |teacher_cohort| %>
+  
+   <tr>
         <td><%= teacher_cohort.teacher_id %></td>
         <td><%= teacher_cohort.cohort_id %></td>
         <td><%= link_to 'Show', teacher_cohort %></td>
         <td><%= link_to 'Edit', edit_teacher_cohort_path(teacher_cohort) %></td>
         <td><%= link_to 'Destroy', teacher_cohort, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    </tr>
+
     <% end %>
   </tbody>
 </table>
