fixed links added login through clearence gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,21 +22,26 @@
   </form>
   </nav>
 
+ 
+
   <br>
   
   <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" href="teachers">Teachers</a>
+    <a class="nav-link active" href="/teachers">Teachers</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="students">Students</a>
+    <a class="nav-link" href="/students">Students</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="courses">Courses</a>
+    <a class="nav-link" href="/courses">Courses</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="cohorts">Cohorts</a>
+    <a class="nav-link" href="/cohorts">Cohorts</a>
   </li>
+
+  
+
 </ul>
 
     <%= yield %>
