changed nav bar to yellow

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
 
   <%# navbar %>
-  <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <nav class="navbar bg-warning navbar-light" style="background-color: #e3f2fd;">
   <!-- Navbar content -->
   <a class="navbar-brand">Student Admin Panel</a>
   <form class="form-inline">
