changed find id hardcoded

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -13,11 +13,11 @@
 //   line-height: 18px;
 // }
 
-// pre {
+ pre {
 //   background-color: #eee;
-//   padding: 10px;
+  // padding: 10px;
 //   font-size: 11px;
-// }
+ }
 
 // a {
 //   color: #000;
@@ -36,9 +36,9 @@
 //   padding-bottom: 5px;
 // }
 
-// td {
-//   padding: 0 5px 7px;
-// }
+ td {
+   padding: 0 5px 7px;
+ }
 
 // div {
 //   &.field, &.actions {
@@ -46,9 +46,9 @@
 //   }
 // }
 
-// #notice {
-//   color: green;
-// }
+ #notice {
+   color: green;
+ }
 
 // .field_with_errors {
 //   padding: 2px;
@@ -63,21 +63,21 @@
 //   margin-bottom: 20px;
 //   background-color: #f0f0f0;
 
-//   h2 {
-//     text-align: left;
-//     font-weight: bold;
-//     padding: 5px 5px 5px 15px;
-//     font-size: 12px;
-//     margin: -7px -7px 0;
-//     background-color: #c00;
-//     color: #fff;
-//   }
+  // h2 {
+  //   text-align: left;
+  //   font-weight: bold;
+  //   padding: 5px 5px 5px 15px;
+  //   font-size: 12px;
+  //   margin: -7px -7px 0;
+  //   background-color: #c00;
+  //   color: #fff;
+  // }
 
 //  ul li {
 //  font-size: 12px;
 //  list-style: square;
 //   }
-//}
+// }
 
 // label {
 //   display: block;
