--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,14 @@
   <!-- Navbar content -->
   <a class="navbar-brand">Student Admin Panel</a>
   <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+   <%# <li class="nav-item"> %>
+  <% if signed_in? %>
+  <%= current_user.email %>
+  <%= button_to "Sign out", sign_out_path, method: :delete %>
+<% else %>
+  <%= link_to "Sign in " , sign_in_path %>
+<% end %>
+  <%# </li> %>
   </form>
   </nav>
 
@@ -40,8 +46,16 @@
     <a class="nav-link" href="/cohorts">Cohorts</a>
   </li>
 
-  
+ <li class="nav-item">
+  <% if signed_in? %>
+  <%= current_user.email %>
+  <%= button_to "Sign out", sign_out_path, method: :delete %>
+<% else %>
+  <%= link_to "Sign in", sign_in_path %>
+<% end %>
+  </li>
 
+ 
 </ul>
 
     <%= yield %>
