--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -27,11 +27,23 @@
   </div>
 
   <div class="field">
+  
     <%= form.label :education %>
     <%= form.text_field :education %>
   </div>
 
+    <div class = "field">
+    <%= form.label :cohort %>
+    <%= form.text_field :cohort %>
+  </div>
+
+
+  <%# <%= f.collection_select(:cohort_id, Cohort.all, :id, :name) %> 
+
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
+
 <% end %>
