--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -2,6 +2,8 @@
 
 <h3>Teachers</h3>
 
+
+
  <table>
 
 
@@ -18,6 +20,7 @@
       <th>Age</th>
       <th>Salary</th>
       <th>Education</th>
+      <th>Cohort</th>
       <th colspan="3"></th>
     </tr>
 
@@ -30,6 +33,13 @@
         <td><%= teacher.age %></td>
         <td><%= teacher.salary %></td>
         <td><%= teacher.education %></td>
+       
+        <td>
+        <% @teacher_cohort.each do |cohort| %>
+          <h1><%=cohort.name%></h1>    
+        <% end %>
+        </td>
+        
         <td><%= link_to 'Show', teacher %></td>
         <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
         <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
