--- a/app/views/cohorts/_form.html.erb
+++ b/app/views/cohorts/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.number_field :course_id %>
   </div>
 
+  <div class="field">
+      <%= form.label :teacher_id %>
+   <%= form.select :teacher_id, @teachers.map { |teacher| [teacher.first_name +  teacher.last_name , teacher.id] } %>
+</div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
