--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -29,7 +29,7 @@
   <div class="field">
   
     <%= form.label :education %>
-    <%= form.text_field :education %>
+    <%= form.select :education, ["HS", "College", "Masters", "PH.D"] %>
   </div>
 
     <div class = "field">
