--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -32,9 +32,9 @@
     <%= form.select :education, ["HS", "College", "Masters", "PH.D"] %>
   </div>
 
-    <div class = "field">
+   <div class = "field">
     <%= form.label :cohort %>
-    <%= form.text_field :cohort %>
+    <%= form.collection_select(:cohort_id, Cohort.all, :id, :name) %>
   </div>
 
 
