final commit before submit

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :age %>
-    <%= form.number_field :age %>
+    <%= form.select :age, (21..60)%>
   </div>
 
   <div class="field">
