--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :hours %>
-    <%= form.number_field :hours %>
+    <%= form.select :age,(0..1000)%>
   </div>
 
   <div class="actions">
